[tool.poetry]
name = "orderings"
version = "1.3.2"
description = "Ordering enumeration and protocols."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/orderings"
repository = "https://github.com/nekitdev/orderings"
documentation = "https://nekitdev.github.io/orderings"

keywords = ["python", "ordering"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/orderings/issues"

[[tool.poetry.packages]]
include = "orderings"

[tool.poetry.dependencies]
python = ">= 3.8"

typing-aliases = ">= 1.8.0"
typing-extensions = ">= 4.10.0"

[tool.poetry.group.format.dependencies]
ruff = "0.3.3"

[tool.poetry.group.check.dependencies]
mypy = "1.9.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.6.2"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.4.4"
pytest = "8.1.1"
pytest-cov = "4.1.0"
hypothesis = "^6.99.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.13"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.4.2"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E741",  # ambiguous variable name
]

[tool.pytest.ini_options]
addopts = "--cov orderings"
testpaths = ["tests"]

[tool.coverage.run]
source = ["orderings"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "orderings"
version = "1.3.2"
url = "https://github.com/nekitdev/orderings"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
